# hik_robot_project

./: README.md
service_robot/ros_android/: README.md
service_robot/ros_java/: README.md
service_robot/ros_project/src/hik_robot_nav_test/: CMakeLists.txt  package.xml
service_robot/ros_project/src/hik_robot_nav_test/msg/: HikRobotSetModules.msg  HikRobotSetTaskMsg.msg
service_robot/ros_project/src/hik_robot_nav_test/scripts/: .test_patrol_topic.py.swp  hik_robot_main_service.py  hik_robot_main_topic.py  test_client.py  test_follow_topic.py  test_patrol_topic.py  test_talker.py
service_robot/ros_project/src/hik_robot_nav_test/srv/: HikRobotSetModules.srv  HikRobotSetTaskSrv.srv
service_robot/ros_project/src/main/: CMakeLists.txt  package.xml
